--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
+    "express-rate-limit": "^7.4.0",
     "express-session": "^1.18.0",
     "ioredis": "^5.4.1",
     "passport-jwt": "^4.0.1",
