--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,38 @@
 version: '3.8'
 
 services:
+  db:
+    image: postgres:15
+    container_name: postgres_db
+    restart: always
+    environment:
+      POSTGRES_USER: your_user
+      POSTGRES_PASSWORD: your_password
+      POSTGRES_DB: your_database
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+
   app:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: node_app
+    restart: always
     ports:
       - "3000:3000"
     depends_on:
       - db
     environment:
-      - NODE_ENV=production
-      - DATABASE_URL=postgresql://postgres:mansur890@db:5432/yandex
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: 1505
+      DB_NAME: yandex_eats
     volumes:
-      - .:/app
-    networks:
-      - app-network
-
-  db:
-    image: postgres:14
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: mansur890
-      POSTGRES_DB: yandex
-    ports:
-      - "5432:5432"
-    volumes:
-      - db-data:/var/lib/postgresql/data
-    networks:
-      - app-network
+      - .:/usr/src/app
+    command: npm start
 
 volumes:
-  db-data:
-
-networks:
-  app-network:
-    driver: bridge
+  postgres_data:
