--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   db:
-    image: postgres:15
+    image: postgres:alpine
     container_name: postgres_db
     restart: always
     environment:
@@ -32,7 +32,7 @@ services:
       DB_NAME: yandex_eats
     volumes:
       - .:/usr/src/app
-    command: npm start
+    command: npm run start:dev
 
 volumes:
   postgres_data:
